# variant_effect_prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: __init__.py  plots.py  summary.py
notebooks/: variant_effect_prediction_demo.ipynb
prediction/: __init__.py  effect.py  marginalization.py  splice.py
tests/: test_coordinates.py  test_effect.py  test_filters.py  test_io.py  test_splice.py  test_summary.py
vcf_utils/: __init__.py  coordinates.py  filters.py  io.py
